updated final slides

--- a/Slides/DashboardingSlides.html
+++ b/Slides/DashboardingSlides.html
@@ -136,16 +136,28 @@ slides > slide:not(.nobackground):before {
 
 </article></slide><slide class=""><hgroup><h2>Why should you DLAB?</h2></hgroup><article  id="why-should-you-dlab" class="smaller flexbox vcenter">
 
-<ul>
-<li><p>Pretty!</p></li>
-<li><p>Organized</p></li>
-<li><p>Interactive</p></li>
-<li><p>Reproducible</p></li>
-<li><p>Free</p></li>
-<li><p><em>You get to use R</em></p></li>
-<li><p>Flexible</p></li>
-<li><p>Better visualizations (sorry gg)</p></li>
-<li><p>People will respect you</p></li>
+<ul class = 'build'>
+<li>Pretty &amp; organized</li>
+</ul>
+
+<ul class = 'build'>
+<li>Risk free, templates galore</li>
+</ul>
+
+<ul class = 'build'>
+<li>Better vizualizations (sorry gg)</li>
+</ul>
+
+<ul class = 'build'>
+<li><em>You get to use R</em></li>
+</ul>
+
+<ul class = 'build'>
+<li>Flexible, reproducible</li>
+</ul>
+
+<ul class = 'build'>
+<li>People will respect you</li>
 </ul>
 
 </article></slide><slide class=""><hgroup><h2>How to DLAB?</h2></hgroup><article  id="how-to-dlab" class="smaller flexbox vcenter">
